--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -1126,6 +1126,7 @@ footer {
 }
 .header__actions-bottom {
   display: flex;
+  align-items: flex-start;
 }
 .header__lang-selector {
   margin-left: 20px;
